Complete Results section of Patricia observations chapter.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -145,6 +145,24 @@ volume = {71},
 pages = {1644-1622}
 }
 
+@article{Danielsen1993,
+author = {Danielsen, E. F.},
+year = {1993},
+title = {{In situ evidence of rapid, vertical, irreversible transport of lower tropospheric air into the lower tropical stratosphere by convective cloud turrets and by larger-scale upwelling in tropical cyclones}},
+journal = JGR,
+volume = {98},
+pages = {8665-8681}
+}
+
+@article{Dasetal2008,
+author = {Das, S. S. and A. K. Patra and D. N Rao},
+year = {2008},
+title = {VHF radar echoes in the vicinity of tropopause during the passage of tropical cyclone: First observations from the Gadanki MST radar},
+journal = JGR,
+volume = {113},
+number = {D09113}
+}
+
 @article{DoyleTCI,
 author = {Doyle, James D. and Moskaitis, J. and Feldmeier, J and Ferek, R. and Beaubien, M. and Bell, M. and Cecil, D. and Creasey, R. and Duran, P. and Elsberry, R. and Komaromi, W. and Molinari, J. and Ryglici, D. and Stern, D. and Velden, C. and Wang, X. and Allen, T. and Barrett, B. and Black, P. and Dunion, J. and Emanuel, K. and Harr, P. and Harrison L. and Hendricks, E. and Herndon, D. and Jeffries, W. and Majumdar, S.J. and Moore, J. and Pu, Z. and Rogers, R. and Sanabia, E. and Tripoli, G. and Zhang, D.-L.},
 title = {{A view of tropical cyclones from above: The Tropical Cyclone Intensity (TCI) Experiment}},
@@ -191,6 +209,15 @@ year = {2018},
 volume = {146},
 number = {1},
 pages = {119-134}
+}
+
+@article{EbertHolland1992,
+author = {Ebert, E. E. and G. J. Holland},
+year = {1992},
+title = {{Observations of record cold cloud-top temperatures in Tropical Cyclone Hilda (1990)}},
+journal = MWR,
+volume = {120},
+pages = {2240-2251}
 }
 
 @article{EmanuelRotunno2011,
@@ -281,6 +308,15 @@ volume = {145},
 pages = {1339-1359}
 }
 
+@article{KuangBretherton2004,
+author = {Kuang, Z. and C. S. Bretherton},
+year = {2004},
+title = {Convective influence on the heat balance of the tropical tropopause layer: A cloud-resolving model study},
+journal = JAS,
+volume = {61},
+pages = {2919-2927}
+}
+
 @article{Lazzaraetal1999,
 author = {Lazzara, M. A. and J. M. Benson and R. J. Fox and D. J. Laitsch and J. P. Rueden and D. A. Santek and T. M. Whittaker and J. T. Young},
 year = {1999},
@@ -299,7 +335,7 @@ volume = {144},
 pages = {1841-1850}
 }
 
-@article{Molinarietal,
+@article{Molinarietal2014,
 author = {Molinari, J. and P. Duran and D. Vollaro},
 year = {2014},
 title = {{Low Richardson number in the tropical cyclone outflow layer}},
@@ -344,6 +380,33 @@ volume = {44},
 pages = {542-561}
 }
 
+@article{Salbyetal2003,
+author = {Salby, M. and F. Sassi and P. Callaghan and W. Read and H. Pumphrey},
+year = {2003},
+title = {Fluctuations of cloud, humidity,and thermal structure near the tropical tropopause},
+journal = JCLI,
+volume = {16},
+pages = {3428-3466}
+}
+
+@article{SalbyCallaghan2004,
+author = {Salby, M. and P. Callaghan},
+year = {2004},
+title = {Control of the tropical tropopause and vertical transport across it},
+journal = JCLI,
+volume = {17},
+pages = {965-985}
+}
+
+@article{Schubertetal2007,
+author = {Schubert, W. H. and C. M. Rozoff and J. L. Vigh and B. D. McNoldy and J. P. Kossin},
+year = {2007},
+title = {{On the distribution of subsidence in the hurricane eye}},
+journal = QJRMS,
+volume = {133},
+pages = {595-605}
+}
+
 @article{Seideletal2001,
 author = {Seidel, D. J. and R. J. Ross and J. K. Angell and G. C. Reid},
 year = {2001},
@@ -351,6 +414,15 @@ title = {{Climatological characterisitcs of the tropical tropopause as revealed 
 journal = JGR,
 volume = {106},
 pages = {7857-7878}
+}
+
+@article{Sherwoodetal2003,
+author = {Sherwood, S. C. and T. Horinouchi and H. A. Zeleznik},
+year = {2003},
+title = {Convective impact on temperatures observed near the tropical tropopause},
+journal = JAS,
+volume = {60},
+pages = {1847-1856}
 }
 
 @article{SternZhang2013,
@@ -395,4 +467,13 @@ author = {{University of Wyoming}},
 year = {2016},
 title = {{Atmospheric Soundings. University of Wyoming, accessed 6 April 2016}},
 note = {{\url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}}}
+}
+
+@article{YuterHouze1995,
+author = {Yuter, S. E. and R. A. Houze},
+year = {1995},
+title = {{Three-dimensional kinematic and microphysics evolution of Florida cumulonimbus. Part II: Frequency distributions of vertical velocity, reflectivity, and differential reflectivity}},
+journal = MWR,
+volume = {123},
+pages = {1941-1963}
 }
