--- a/patricia.tex
+++ b/patricia.tex
@@ -102,6 +102,97 @@ The decay of the TIL during this period allowed the tropopause height to increas
 Northwest of the storm center, meanwhile, the static stability below 17 km increased, and the tropopause height decreased. Some remnants of the TIL remained, with a small region marked by a 2 K (100 m)\textsuperscript{-1} temperature inversion 70–80 km northwest of the storm center.
 Localized areas of large static stability also were present in the 17.5–18.5-km layer.
 
+Forty minutes later, a southwest–northeast transect observed a similar structure in the southwestern quadrant of the storm, with a temperature inversion persisting outside of the 40-km radius (Fig. \ref{fig:stab}c).
+In the eye region, however, the TIL had eroded further and the tropopause height increased to 18 and 18.1 km southwest and northeast of the center, respectively.
+Although the dropsonde deployed nearest the storm center and the dropsonde deployed just to its southwest are missing data in the tropopause layer, two dropsondes near the edge of the eye---dropsondes number 14 and 17---observed a nearly isothermal layer extending from 16.7 km upward to 18 km.
+The transition from an inversion layer on 21 October to an isothermal layer on 22 October was associated with decreasing static stability in the eye region during this period (cf. Figs. \ref{fig:stab}e,g) and an increase in tropopause height.
+Southwest of the eye, a persistent TIL limited the tropopause height to the layer between 17 and 17.5 km, and northeast of the eye, between 16.7 and 16.9 km (Fig. \ref{fig:stab}c).
+The asymmetry in tropopause height is coincident with a convective asymmetry characterized by coldest brightness temperatures southwest of the storm center and warmest brightness temperatures northeast of the storm center (Fig. \ref{fig:patricia_ir}c).
+
+On 23 October (Figs. \ref{fig:stab}d,h), the tropopause reached 18.3 km---the maximum level of available data---in two soundings through Patricia’s eye (dropsondes 33 and
+34).
+This represents a further increase in tropopause height over the eye between 22 and 23 October, and was associated with decreasing static stability during that period within the 20-km radius (cf. Figs. \ref{fig:trop}g,h).
+In contrast, no sounding outside of the 20-km radius observed a tropopause higher than 17.5 km.
+These regions saw a restrengthening of the TIL, with a large number of dropsondes once again observing temperature inversions of magnitude greater than 2 K (100 m)\textsuperscript{-1}, especially above the eyewall regions near 70 km northwest and 30 km southeast of the storm center.
+These regions also were marked by local maxima in tropopause height.
+Near 10--20-km radii on each side of the storm center, like the previous day, there was a layer of nearly zero $\Delta T/\Delta z$, extending down to the 16.2-km level, which was deeper into the troposphere than on the previous day.
+It is unclear what caused these quasi-isothermal layers on the outer edge of the eye, but their existence complicates the definition of the tropopause.
+For example, the cold-point tropopause height in dropsonde number 28 was 16.3 km, where the temperature reached its minimum of -72.12\textdegree{}C.
+The same dropsonde, however, observed a temperature of -72.07\textdegree{}C at 17.8 km.
+The difference between these two temperatures was well within the margin of error of the dropsonde temperature sensor (0.5\textdegree{}C; \citeauthor{BellTCI} \citeyear{BellTCI}).
+Thus, the cold-point tropopause might have been much higher at these locations and we do not attribute any significance to the sharp, localized drops in tropopause height on each side of the eye.
+In contrast, the presence of an elevated tropopause over the eye in multiple soundings on 22 and 23 October, together with the systematic increase in tropopause height throughout the observation period, lends confidence that the elevated tropopause over the eye is a real signal.
+
+Cross sections of $\theta$ are shown in Figs. \ref{fig:anomalies}a--d and $\theta$ anomalies in Figs. \ref{fig:anomalies}e–h.
+On 21 October, a broad region of Patricia’s inner core exhibited $\theta$ anomalies colder than -4 K at and just below the tropopause (Fig. \ref{fig:anomalies}e).
+Immediately above this anomalous cold layer existed a layer with warm anomalies greater than 8 K.
+This anomalous warm layer, combined with the anomalous cold layer at and below the tropopause, helped to produce the particularly well-defined TIL observed on 21 October (Fig. \ref{fig:stab}a).
+As Patricia’s RI commenced, an upper-tropospheric warm core began to develop within
+the 30-km radius.
+For example, the maximum $\theta$ at the 16-km level increased from approximately 368 K on 21 October (Fig. \ref{fig:anomalies}a) to 378 K on 22 October (Fig. \ref{fig:anomalies}c).
+Meanwhile, the horizontally extended cold anomaly at and just beneath the tropopause weakened considerably, as did the warm anomaly in the lower stratosphere.
+Just above the tropopause to the northeast of the storm center, however, a warm anomaly of up to 8 K remained (Fig. \ref{fig:anomalies}g), along with a cold anomaly of up to 4 K immediately surrounding the tropopause.
+Later in the RI period (22--23 October), Patricia’s warm core developed more rapidly, with the strongest warming confined to within 20 km of the storm center.
+By 23 October, upper-tropospheric $\theta$ within the eye exceeded 400 K---a value previously found only in the lower stratosphere.
+Oscillations in $\theta$, possibly inertia--gravity waves, are evident to the northwest of the eye just radially outside of the secondary eyewall (Fig. \ref{fig:anomalies}d), extending from 60 km to at least 130 km northwest of the storm center.
+These waves affected the static stability all the way up to 18 km (Fig. \ref{fig:stab}h), caused 100--200-m fluctuations in the tropopause height, and were associated with oscillations in radial and tangential velocity (not shown).
+A detailed analysis of these waves is outside of the scope of this paper, but to our knowledge this may be the first time that inertia--gravity waves have been resolved by dropsondes in a hurricane.
+
+Changes in $\theta$ over 24 h (Fig. \ref{fig:dtheta}) highlight two distinct periods of $\theta$ evolution during Patricia’s RI.
+Figure \ref{fig:dtheta}a shows the change in $\theta$ between 21 and 22 October (Fig. \ref{fig:anomalies}b minus Fig. \ref{fig:anomalies}a) and Fig. \ref{fig:dtheta}b the $\theta$ change between 22 and 23 October (Fig. \ref{fig:anomalies}d minus Fig. \ref{fig:anomalies}b).\footnote{We have chosen to use only the first transect on 22 October (Fig. \ref{fig:patricia_ir}b) because it sampled the same quadrants as the center-crossing transects on 21 and 23 October; difference fields using the second, southwest--northeast, transect on 22 October (Fig. \ref{fig:patricia_ir}c) are qualitatively similar (not shown).}
+The differences are scaled to 24 h by multiplying by $24/\Delta t$, where $\Delta t$
+is the time (in hours) separating the center crossings of the two transects.
+During the early part of Patricia’s RI (Fig. \ref{fig:dtheta}a), $\theta$ decreased dramatically above the 17.5-km level, with cooling greater than 10 K observed at nearly all radii over a 24-h period.
+A radially extensive region of warming existed just a few hundred meters below this strong cooling, with $\theta$ increases of at least 4 K observed at nearly all radii.
+These $\theta$ increases maximized in the 17.0--17.4-km layer---the layer in which the tropopause was located throughout much of the cross section (see Figs. \ref{fig:stab}a,b).
+Later in the RI period (Fig. \ref{fig:dtheta}b), $\theta$ increased over almost the entire domain, including in the lower stratosphere up to at least 18.4 km.
+These increases no longer maximized in a thin, horizontally extended layer near the tropopause; rather, the largest $\theta$ changes were confined to a region within 30 km of the storm center.
+Maximum $\theta$ tendencies flanked the storm center on each side, consistent with the ‘‘warm ring’’ noted by \cite{Schubertetal2007} and \cite{SternZhang2013}.
+Within the eye region (radius <20 km), the magnitude of the positive $\theta$ tendencies generally decreased with height above 17.2 km, which indicates a destabilization of the layer above 17.2 km during this period, as was shown in Fig. \ref{fig:stab}.
+
+The two distinct modes of $\theta$ variability seen in Fig. \ref{fig:dtheta} suggest that the dominant processes governing $\theta$ evolution in the upper troposphere and lower stratosphere changed throughout Patricia’s RI.
+The change in the vertical profiles of $\theta$ at the storm center during this time is illustrated in Fig. \ref{fig:schematic}.
+Between 21 (blue line) and 22 October (orange line), tropospheric $\theta$ increased almost uniformly in the layer between 16 and 17.1 km, consistent with the increasing inner-core $\theta$ that is expected in an intensifying TC.
+In contrast, the layer above 17.1 km was characterized by increasing $\theta$ below 17.3 km and decreasing $\theta$ above.
+Inset on the bottom right of Fig. \ref{fig:schematic} is a schematic diagram of turbulent mixing across a highly stable layer.
+Mixing will tend to increase $\theta$ below the stable layer and decrease $\theta$ above, with the maximum tendencies occurring immediately below and above the initial stability maximum.
+The 24-h $\theta$ change during the 21--22 October period (Fig. \ref{fig:dtheta}a) shows precisely this structure---with $\theta$ tendencies maximized in a shallow, horizontally extended layer immediately surrounding the tropopause---an indication that turbulent mixing might have played a role in weakening the TIL early in the period.
+This hypothesis is supported by previous work that observed layers conducive to turbulence in the upper levels of hurricanes (\citeauthor{Molinarietal2014} \citeyear{Molinarietal2014}; \citeauthor{DuranMolinari2016} \citeyear{DuranMolinari2016}) and radar observations of upper-tropospheric turbulence in TCs \citep{Dasetal2008}.
+
+Observations of IR brightness temperature during this period suggest that overshooting convection might have acted as an agent of this mixing, consistent with previous observations and numerical simulations (e.g.,\citeauthor{Danielsen1993} \citeyear{Danielsen1993}; \citeauthor{Salbyetal2003} \citeyear{Salbyetal2003}).
+The time evolution of overshooting convection throughout Patricia’s lifetime is expressed in Fig. \ref{fig:hovmoller}  as a radius--time diagram.
+This plot is created by counting the number of IR pixels colder than -80\textdegree{}C in a 5-km-wide annulus and dividing by the total number of pixels in that annulus.
+This is performed out to the 300-km radius using GOES-13 imagery every 30 min throughout Patricia’s lifetime, and the percentages are plotted at the midpoint of each annulus.
+Since the cold-point temperature in Patricia’s eyewall region remained near -80\textdegree{}C throughout most of its RI (Fig. \ref{fig:trop}a), this temperature was chosen as the cutoff for overshooting convection.
+As in \cite{EbertHolland1992}, any regions characterized by brightness temperature colder than the tropopause are assumed to contain overshooting convective towers.
+Prior to the first WB-57 center crossing on 21 October, very little overshooting convection was observed, but cloud tops colder than -80\textdegree{}C began to cover a larger area right around the time of the first transect.
+These cold cloud tops were not necessarily overshooting, however, since the cold-point temperature observed by dropsondes at this time was in the -81\textdegree{} to -84\textdegree{}C range (Fig. \ref{fig:trop}a).
+To determine the full distribution of the coldest brightness temperatures, a contoured frequency by time diagram (CFTD) is shown in Fig. \ref{fig:CFTD}.
+This plot is analogous to the contoured frequency by altitude diagram (CFAD) described in detail by \cite{YuterHouze1995}, except with time as the ordinate rather than altitude.
+Each point on the plot represents the percent of IR pixels within the 300-km radius that have the brightness temperature indicated by the abscissa, at the time indicated by the ordinate.
+At the time of the 21 October transect, very few IR pixels colder than -81\textdegree{}C were observed, which indicates that convection overshooting the tropopause was not very widespread at this time.
+Soon after the 21 October transect, however, cloud tops colder than -80\textdegree{}C became much more common within the 300-km radius (Fig. \ref{fig:hovmoller}).
+This time period leading up to the transects on 22 October also saw a dramatic increase in the coverage of the coldest cloud tops (Fig. \ref{fig:CFTD}), with the distributions of IR brightness temperature maximizing near -84\textdegree{}C throughout much of the period.
+Between 0000 and 0600 UTC 22 October, IR pixels as cold as -90\textdegree{}C were observed, which is 6\textdegree{}C colder than the coldest temperature observed by dropsondes during the 21 October transect (Fig. \ref{fig:trop}a).
+These observations point to a considerable increase in the extent of overshooting convection between the flights on 21 and 22 October.
+It is well known that deep, overshooting convection can affect the $\theta$ stratification near the tropopause through not only mixing, but also upper-tropospheric latent heating \citep{SalbyCallaghan2004} and cooling by adiabatic lofting \citep{Sherwoodetal2003} and detrainment \citep{Salbyetal2003}.
+We hypothesize that the localized upward bulges observed in the regions of coldest IR brightness temperature---and their corresponding cold anomalies---are the result of adiabatic lofting by individual overshooting convective towers.
+These convective-scale processes strongly cool a layer at and below the tropopause, which leads to an increase in the vertical gradient of $\theta$ just above the tropopause, thus increasing $N^2$ locally and strengthening the TIL.
+In addition, we hypothesize that on the mesoscale, cold air detraining from these
+overshooting convective towers acted to cool the lower stratosphere.
+This lower-stratospheric cooling, combined with turbulent mixing across the tropopause and upper-tropospheric latent heating, acted to decrease the vertical gradient of $\theta$ across the tropopause, thus decreasing $N^2$ and causing the observed weakening of the TIL during this period (Fig. \ref{fig:stab}).
+
+Later in the RI period (22--23 October), the lower stratosphere ceased cooling and $\theta$ tendencies no longer maximized in the immediate vicinity of the tropopause.
+Potential temperature changes over this time period were almost exclusively positive in the inner core (Fig. \ref{fig:dtheta}b), and the vertical gradient of $\theta$ at the storm center remained nearly constant in the 16--18.5-km layer (Fig. \ref{fig:schematic}).
+Throughout much of this period, nearly 100\% of the 50--100-km radial band contained brightness temperatures colder than -80\textdegree{}C (Fig. \ref{fig:hovmoller}).
+The extremely cold cloud tops that dominated the previous day, however, were no longer observed; rather, the brightness temperature distributions peaked near -80\textdegree{}C for most of the period, and rapidly warmed leading up to the center crossing on 23 October (Fig. \ref{fig:CFTD}).
+These observations, in union with the observed cold-point temperature hovering around -80\textdegree{}C in the 50--100-km radial band on 22 and 23 October (Fig. \ref{fig:trop}a), suggest that convection did not overshoot as far into the stratosphere during this period than it did during the previous 24 h.
+An expected consequence of this decreased convective overshooting is a decrease in the degree and depth of lower-stratospheric cooling (e.g., \citeauthor{KuangBretherton2004} \citeyear{KuangBretherton2004}), which might explain why the lower stratosphere ceased cooling between 22 and 23 October.
+Another possible consequence of a decrease in overshooting convection is a decrease in the intensity of turbulent mixing across the tropopause.
+Even if the intensity of turbulence remained constant, however, the smaller vertical $\theta$ gradient observed on 22 and 23 October (Fig. \ref{fig:schematic}) would yield a smaller $\theta$ tendency forced by mixing.
+In summary, it appears that the effects of mixing and lower-stratospheric convective detrainment became less important later in Patricia’s RI, and subsidence warming was probably the leading cause of the positive $\theta$ tendencies observed in the eye.
+These positive tendencies, decreasing upward, contributed to a further destabilization of the tropopause layer and the highly localized increase in tropopause height over
+the eye.
 
 %---------------------------------------------------------------------------------------%
 \section{Discussion}
