Add Discussion section of Patricia observations section, but still need to complete references.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -283,7 +283,7 @@ volume = {73},
 pages = {957-973}
 }
 
-@article{Kieuetal,
+@article{Kieuetal2016,
 author = {Kieu, C. and V. Tallapragada and D.-L. Zhang and Z. Moon},
 year = {2016},
 title = {{On the development of double warm-core structures in intense tropical cyclones}},
