Complete references for Patricia result section. Add turbulence paper and all of its figures and captions.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -145,6 +145,15 @@ volume = {71},
 pages = {1644-1622}
 }
 
+@article{Chen2013,
+author = {Chen, H. and D.-L. Zhang},
+year = {2013},
+title = {On the rapid intensification of Hurricane Wilma (2005). Part II: Convective bursts and the upper-level warm core},
+journal = JAS,
+volume = {70},
+number = {146-162}
+}
+
 @article{Danielsen1993,
 author = {Danielsen, E. F.},
 year = {1993},
@@ -161,6 +170,15 @@ title = {VHF radar echoes in the vicinity of tropopause during the passage of tr
 journal = JGR,
 volume = {113},
 number = {D09113}
+}
+
+@article{Dasetal2016,
+author = {Das, S. S. and M. V. Ratnam and K. N. Uma and K. V. Subrahmanyam and I. A. Girach and A. K. Patra and S. Aneesh and K. V. Suneeth and K. K. Kumar and A. P. Kesarkar and S. Sijikumar and G. Ramkumar},
+year = {2016},
+title = {Influence of tropical cyclones on tropospheric ozone: possible implications},
+journal = {{Atmos. Chem. Phys.}},
+volume = {16},
+number = {4837-4847}
 }
 
 @article{DoyleTCI,
@@ -245,6 +263,15 @@ title = {{Structure of the upper troposphere and lower stratosphere in the vicin
 journal = {Pap. Meteor. Geophys.},
 volume = {18},
 pages = {293-310}
+}
+
+@article{Guimondetal2010,
+author = {Guimond, S. R. and G.M. Heymsfield and F. J. Turk},
+year = {2010},
+title = {Multiscale observations of Hurricane Dennis (2005): The effects of hot towers on rapid intensification},
+journal = JAS,
+volume = {67},
+number = {633-653}
 }
 
 @article{HockFranklin1999,
@@ -362,6 +389,24 @@ volume = {72},
 pages = {551-571}
 }
 
+@article{Penn1965,
+author = {Penn, S.},
+year = {1965},
+title = {Ozone and temperature structure in a hurricane},
+journal = {{J. Appl. Meteor.}},
+volume = {4},
+number = {212-216}
+}
+
+@article{RobinsonSherwood2006,
+author = {Robinson, F.J. and S.C. Sherwood},
+year = {2006},
+title = {Modeling the impact of convective entrainment on the tropical tropopause},
+journal = JAS,
+volume = {63},
+number = {1013-1027}
+}
+
 @article{Rogersetal2017,
 author = {Rogers, R. F. and S. Aberson and M. M. Bell and D. J. Cecil and J. D. Doyle and J. Morgerman and L. K. Shay and C. Velden},
 year = {2017},
@@ -477,3 +522,13 @@ journal = MWR,
 volume = {123},
 pages = {1941-1963}
 }
+
+@article{ZhangChen2012,
+author = {Zhang, D.-L. and H. Chen},
+year = {2012},
+title = {Importance of the upper-level warm core in the rapid intensification of a tropical cyclone},
+journal = GRL,
+volume = {39},
+number = {L02806}
+}
+
