--- a/dissertation.tex
+++ b/dissertation.tex
@@ -39,6 +39,7 @@
 %\include{chapter3}
 \include{patricia}
 \include{modeling}
+\include{turb}
 %\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
