Add Section 2 through Section 3b of turbulence paper to turb.tex.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -292,6 +292,13 @@ volume = {113},
 number = {D13103}
 }
 
+@misc{Jarvinenetal1984,
+author = {Jarvinen, B. R. and C. J. Neumann and M. A. S. Davis},
+year = {1984},
+title = {{A tropical cyclone data tape for the North Atlantic Basin, 1886–1983: Contents, limitations, and use}},
+note = {{ NOAA Tech. Memo. NWS NHC 22, 21 pp. [Available online at http://www.nhc.noaa.gov/pdf/NWS-NHC-1988-22.pdf.]}},
+}
+
 @article{Jordan1958,
 author = {Jordan, C. L.},
 year = {1958},
@@ -351,6 +358,15 @@ title = {{The Man Computer Interactive Data Access System: 25 years of interacti
 journal = BAMS,
 volume = {80},
 pages = {271-287}
+}
+
+@article{LoveGeller2012,
+author = {Love, P. T. and M. A. Geller},
+year = {2012},
+title = {Research using high (and higher) resolution radiosonde data},
+journal = {{Eos, Trans. Amer. Geophys. Union}},
+volume = {93},
+number = {337-344}
 }
 
 @article{MarkowskiBryan2016,
@@ -505,6 +521,22 @@ title = {{Temperatures and turbulence at tropopause levels over Hurricane Beulah
 journal = MWR,
 volume = {98},
 pages = {749-755}
+}
+
+@article{WMO1957,
+author = {WMO},
+year = {1957},
+title = {{Meteorology---A three-dimensional science.}},
+journal = {{WMO Bull.}},
+volume = {6},
+number = {134-138}
+}
+
+@misc{WMO1998,
+author = {WMO},
+year = {1998},
+title = {{Manual on codes. Vol. I.1 (Part A: Alphanumeric codes)}},
+note = {WMO Publ. WMO-306, 466 pp.}
 }
 
 @misc{Wyoming2016,
